--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body class="bg-[#1A1A1A] font-roboto">
 <div id="root"></div>
-<script type="module" src="./src/main.jsx"></script>
+<script type="module" src="src/main.jsx"></script>
 </body>
 </html>
